--- a/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/package.json
+++ b/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/QueenBoo/CodeSquadProject2022#readme",
   "dependencies": {
     "ejs": "^3.1.7",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "morgan": "^1.10.0"
   }
 }
